--- a/KBNThesis/.classpath
+++ b/KBNThesis/.classpath
@@ -11,7 +11,11 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk-20"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre -20">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="src/KBN/resources/libraries/core-3.3.0.jar"/>
 	<classpathentry kind="lib" path="src/KBN/resources/libraries/javase-3.3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
