--- a/KBNThesis/.classpath
+++ b/KBNThesis/.classpath
@@ -44,5 +44,20 @@
 	<classpathentry kind="lib" path="src/KBN/resources/libraries/core-3.3.0.jar"/>
 	<classpathentry kind="lib" path="src/KBN/resources/libraries/javase-3.3.0.jar"/>
 	<classpathentry kind="lib" path="src/KBN/resources/libraries/mysql-connector-j-8.1.0.jar"/>
+	<classpathentry kind="lib" path="src/POI Library/commons-codec-1.16.0.jar"/>
+	<classpathentry kind="lib" path="src/POI Library/commons-collections4-4.4.jar"/>
+	<classpathentry kind="lib" path="src/POI Library/commons-compress-1.24.0.jar"/>
+	<classpathentry kind="lib" path="src/POI Library/commons-io-2.13.0.jar"/>
+	<classpathentry kind="lib" path="src/POI Library/commons-math3-3.6.1.jar"/>
+	<classpathentry kind="lib" path="src/POI Library/curvesapi-1.08.jar"/>
+	<classpathentry kind="lib" path="src/POI Library/log4j-api-2.20.0.jar"/>
+	<classpathentry kind="lib" path="src/POI Library/log4j-core-2.21.1.jar"/>
+	<classpathentry kind="lib" path="src/POI Library/poi-5.2.4.jar"/>
+	<classpathentry kind="lib" path="src/POI Library/poi-examples-5.2.4.jar"/>
+	<classpathentry kind="lib" path="src/POI Library/poi-ooxml-5.2.4.jar"/>
+	<classpathentry kind="lib" path="src/POI Library/poi-ooxml-lite-5.2.4.jar"/>
+	<classpathentry kind="lib" path="src/POI Library/poi-scratchpad-5.2.4.jar"/>
+	<classpathentry kind="lib" path="src/POI Library/SparseBitSet-1.3.jar"/>
+	<classpathentry kind="lib" path="src/POI Library/xmlbeans-5.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
