--- a/KBNThesis/.classpath
+++ b/KBNThesis/.classpath
@@ -59,5 +59,7 @@
 	<classpathentry kind="lib" path="src/POI Library/poi-scratchpad-5.2.4.jar"/>
 	<classpathentry kind="lib" path="src/POI Library/SparseBitSet-1.3.jar"/>
 	<classpathentry kind="lib" path="src/POI Library/xmlbeans-5.1.1.jar"/>
+	<classpathentry kind="lib" path="src/mailAPI/javax.mail.jar"/>
+	<classpathentry kind="lib" path="src/mailAPI/activation-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
